--- a/MovieStore/MovieStore.csproj
+++ b/MovieStore/MovieStore.csproj
@@ -162,6 +162,14 @@
     <Compile Include="Migrations\201910032003266_ApplyAnnotationsToCustomerName.Designer.cs">
       <DependentUpon>201910032003266_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201910051853037_NamePropertyAddedInMemType.cs" />
+    <Compile Include="Migrations\201910051853037_NamePropertyAddedInMemType.Designer.cs">
+      <DependentUpon>201910051853037_NamePropertyAddedInMemType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201910051925307_UpdateMemTypeData.cs" />
+    <Compile Include="Migrations\201910051925307_UpdateMemTypeData.Designer.cs">
+      <DependentUpon>201910051925307_UpdateMemTypeData.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\MembershipType.cs" />
@@ -208,7 +216,6 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Movies\Index.cshtml" />
-    <Content Include="Views\Customers\Customers.cshtml" />
     <Content Include="Views\Movies\ListOfMovies.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
@@ -247,6 +254,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201910032003266_ApplyAnnotationsToCustomerName.resx">
       <DependentUpon>201910032003266_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910051853037_NamePropertyAddedInMemType.resx">
+      <DependentUpon>201910051853037_NamePropertyAddedInMemType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910051925307_UpdateMemTypeData.resx">
+      <DependentUpon>201910051925307_UpdateMemTypeData.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
