--- a/MovieStore/MovieStore.csproj
+++ b/MovieStore/MovieStore.csproj
@@ -174,8 +174,17 @@
     <Compile Include="Migrations\201910061840242_BirthDateAddedInCustomer.Designer.cs">
       <DependentUpon>201910061840242_BirthDateAddedInCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201910070554034_GenreModelAdded.cs" />
+    <Compile Include="Migrations\201910070554034_GenreModelAdded.Designer.cs">
+      <DependentUpon>201910070554034_GenreModelAdded.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201910070557361_PopulateGenreData.cs" />
+    <Compile Include="Migrations\201910070557361_PopulateGenreData.Designer.cs">
+      <DependentUpon>201910070557361_PopulateGenreData.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -223,6 +232,7 @@
     <Content Include="Views\Movies\ListOfMovies.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -267,6 +277,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201910061840242_BirthDateAddedInCustomer.resx">
       <DependentUpon>201910061840242_BirthDateAddedInCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910070554034_GenreModelAdded.resx">
+      <DependentUpon>201910070554034_GenreModelAdded.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910070557361_PopulateGenreData.resx">
+      <DependentUpon>201910070557361_PopulateGenreData.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
