--- a/.gitattributes
+++ b/.gitattributes
@@ -62,4 +62,5 @@
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
 *.js linguist-detectable=false
+*.css linguist-detectable=false
 *.cs linguist-detectable=true
